<resources>
    <string name="app_name">TestCaseMiniGame</string>
    <string name="question_image_desc">question_image</string>
    <string name="answer_input_hint">Answer</string>
    <string name="answered_button_text">Answer Question</string>
    <string name="congratulations_text">Finally, you\'we managed to answer all of my unfathomably hard question! You may pick your reward!</string>
    <string name="reward_one_button_text">Reward 1</string>
    <string name="reward_two_button_text">Reward 2</string>
    <string name="welcome_screen_text">WELCOME</string>
    <string name="start_button_text">Start QUIZ!</string>
    <string name="joke_dialog_header_text">Here\'s your joke as a reward for being so smart!</string>
    <string name="dialog_button_text">CANCEL</string>
    <string name="congratulations_image_desc">congratulations</string>
</resources>